...
                                <rect key="frame" x="16" y="750" width="408" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>s
                                    <constraint firstAttribute="height" constant="48" id="2rX-T2-Q2A"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
                                    <color key="baseForegroundColor" name="YPBlack"/>
                                    <color key="baseBackgroundColor" name="YPWhite"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
                                <rect key="frame" x="8" y="70" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="EhW-vA-q8R"/>
                                    <constraint firstAttribute="height" constant="48" id="GVk-5Y-hYG"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="Backward" title=""/>
                                <connections>
                                    <action selector="backButtonClicked:" destination="teh-j8-MFH" eventType="touchUpInside" id="E1Y-K0-aDX"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rcV-et-GIg">
                                <rect key="frame" x="195" y="855" width="50" height="50"/>
...
