...
    var presenter: WebViewPresenterProtocol? 

    override func viewDidLoad() {
        super.viewDidLoad()
        print("[WebViewViewController] load")

        webView.accessibilityLabel = "UnsplashWebView"
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
    }

    override func viewWillAppear(_ animated: Bool) {
        observer = webView.observe(
...
