...
        if let createdAt = photo.createdAt {
            cell.dateText.text = dateFormatter.string(from: createdAt)
        } else {
            cell.dateText.text = ""
        }

        cell.likeButton.accessibilityIdentifier = "Like"

        cell.setIsLiked(isLiked: photo.isLiked)

        cell.delegate = self
    }

...
